--- a/06_pca_tsne.ipynb
+++ b/06_pca_tsne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([9.98091230e-01, 1.73591562e-03, 9.49589576e-05, 5.02173562e-05,\n",
-       "       1.23636847e-05, 8.46213034e-06, 2.80681456e-06, 1.52308053e-06,\n",
-       "       1.12783044e-06, 7.21415811e-07, 3.78060267e-07, 2.12013755e-07,\n",
-       "       8.25392788e-08])"
+       "array([0.99809123, 0.99982715, 0.99992211, 0.99997232, 0.99998469,\n",
+       "       0.99999315, 0.99999596, 0.99999748, 0.99999861, 0.99999933,\n",
+       "       0.99999971, 0.99999992, 1.        ])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +61,7 @@
     "pca.fit(X)\n",
     "#print(pca.components_)\n",
     "\n",
-    "pca.explained_variance_ratio_\n",
+    "pca.explained_variance_ratio_.cumsum()\n",
     "\n",
     "#X_std = scaler.fit_transform(df[columns])\n",
     "#components = pca.fit_transform(X_std)\n",
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +108,7 @@
        "1"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
